添加reduce系列API的文档注释和单测